--- a/index.html
+++ b/index.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
-<html lang="">
-  <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-      <link rel="stylesheet" href="/src/assets/css/reset.css">
-<link rel="stylesheet" href="/src/assets/scss/main.scss">
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-    <script src="https://kit.fontawesome.com/4ce4a552e0.js" crossorigin="anonymous"></script>
-  </body>
+    <title>Gabor Eszaki - CV2026</title>
+    <link rel="stylesheet" href="/src/assets/css/reset.css">
+    <link rel="stylesheet" href="/src/assets/scss/main.scss">
+
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Gabor Eszaki CV-2026" />
+    <link rel="manifest" href="/site.webmanifest" />
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+<script src="https://kit.fontawesome.com/4ce4a552e0.js" crossorigin="anonymous"></script>
+</body>
 </html>
